# rasp_pi_workshop

./: Makefile  README.md  check.py  main.py  pyproject.toml
instructions/: handout.md
rasp_pi_workshop/: __init__.py  check.py  main.py  main_agent.py  main_inter.py
rasp_pi_workshop/agent/: agent.py  interactive.py  llm.py
rasp_pi_workshop/tools/: base.py  example.py  humidity.py  py_code_exec.py  temperature.py
